# rag_llm_telebot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
rag_llm_bot/: __main__.py  config.py  db.py  db.sql  message_texts.py
rag_llm_bot/handlers/: __init__.py  help.py  start.py  text_message.py
